style.css
html {
    overflow: scroll;
    overflow-x: hidden;
    height: 100%;
    font-family: europa, sans-serif;
    font-weight: 400;
    font-style: normal;
    scrollbar-width: none;
}
::-webkit-scrollbar {
    width: 0px;  /* Remove scrollbar space */
    background: transparent;  /* Optional: just make scrollbar invisible */
}


body{
    height: 100%;
    font-family: europa, sans-serif;
    font-weight: 400;
    font-style: normal;
}

p {
    text-align: left;
    padding-left: 2em;
    padding-right: 2em;
    color: black;
}



.blue {
    color: #003CFF;
}

.orange {
    color: #ff8800;
}


.box {
   /* background-image: url("https://i.imgur.com/HbJfvDU.png");*/
    background-image: url("BlurredBackground2.png");
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: top;
    background-attachment: fixed;
    z-index: -2;

}

.blur {
    background: #ffffff2c;
    /*backdrop-filter: blur(25px);
    -webkit-backdrop-filter: blur(25px);*/
    height: auto;
    min-height: 100%;
    z-index: 0;
}


.containerTop {
    display: inline-block
}


.container1 {
    padding-left: 1rem;
    padding-right: 1rem;
    max-width: 100%;
    text-align: center;
}

#aboutPhoto {
    max-width: 100%;
}

#aboutContent {
    max-width: 10%;
}


#aboutCont {
    display: none;
}


.container3 {
    padding-left: 1rem;
    padding-right: 1rem;
    max-width: 100%;
    text-align: center;
}

#resumePhoto {
    max-width: 100%;
}

#resumeContent {
    max-width: 10%;
}

#resumeCont {
    display: none;
}



#projectsMain{
    display: none;
}


#otherProjects{
    display: none;

}


.row {
    display: inline-flex;
    text-align: center;
    width: 100%;
    min-width: 100px;


}

#tbnail {
    min-width: 400px;
    max-width: 33%;
    text-align: center;
}

/*
.total {
    max-width: 1920px;
}

*/

.main_content_padding {
    padding-bottom: 2.5rem /*!main_margin*/;
    padding-left: 1rem /*!main_margin*/;
    padding-right: 1rem /*!main_margin*/;
    font-size: 1.4rem;
    color: #003CFF;
    line-height: 1.5;
    width: 55%;
    min-width: 600px;
    padding-top: 5rem;
    z-index: 1;
}

.content_padding {
    padding-top: 2.5rem ;
    padding-bottom: 2.5rem ;
    padding-left: 1rem ;
    padding-right: 1rem ;
    font-size: 1.4rem;
    font-weight: 400;
    line-height: 1.5;
}



#hp {
    background-image: url("HP.gif");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#orbit {
    background-image: url("OrbitThumb.gif");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#PITP {
    background-image: url("PITPThumb.gif");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#microsoft {
    background-image: url("Microsoft.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#compass {
    background-image: url("Compass\ v3.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#xr {
    background-image: url("XR.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}




#bear {
    background-image: url("BEAR.jpg");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#bees {
    background-image: url("Pollinators.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#light {
    background-image: url("light.jpg");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#vote {
    background-image: url("Jane.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}
#futures {
    background-image: url("futuresthumbnail.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#cardboard {
    background-image: url("card.jpg");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}

#newtech {
    background-image: url("newt.png");
    background-size:cover;
    background-repeat: no-repeat;
    background-position: center;
}



.chat_wrapper2 {
    box-sizing: border-box;
    display: block;
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 70%;
    background: rgba(255, 255, 255, 0.137);
    backdrop-filter: blur(0.2px);
    -webkit-backdrop-filter: blur(0.2px);
    z-index: 2;
    scrollbar-width: none;
}

.chat_wrapper {
    box-sizing: border-box;
    display: block;
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 70%;
    z-index: 2;
    color: #ffffff00;
    backdrop-filter: blur(0px);
    -webkit-backdrop-filter: blur(0px);
    scrollbar-width: none;
}




.about1_content_padding {
    padding-top: 2.5rem ;
    padding-bottom: 2.5rem ;
    padding-left: 1rem ;
    padding-right: 1rem ;
    font-size: 1.4rem;
    font-weight: 400;
    max-width: 33%;
    color: #003CFF;
    line-height: 1.5;

    
    
}
.about1_chat_wrapper {
    max-height: 100%;
    padding-bottom: 120%;
    background-image: url("TayPhoto1.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;


}


.about2_content_padding {
    padding-top: 2.5rem ;
    padding-bottom: 2.5rem ;
    padding-left: 1rem ;
    padding-right: 1rem ;
    font-size: 1.4rem;
    font-weight: 400;
    color: #003CFF;
    line-height: 1.5;
    
    
}
.about2_chat_wrapper {
    box-sizing: border-box;
    display: block;
    position: relative;
    width: 100%;
    height: 70%;
    padding-bottom: 50%;
    background-color: #ffffff81;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    z-index: 2;
}





.resume1_content_padding {
    padding-bottom: 4.5rem;
    color: #003CFF;
    height: auto;
}

.resume1_chat_wrapper {
    min-height: 100%;
    padding-bottom: 120%;
    background-image: url("Tay\ Aras\ -\ Resume.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center,center;
}


.resume2_content_padding {
    padding-top: 1rem ;
    padding-bottom: 4rem ;
    padding-left: 1rem ;
    padding-right: 1rem ;
    font-weight: 400;
    color: #003CFF;
    line-height: 1;
}

.resume2_chat_wrapper {
    box-sizing: border-box;
    display: block;
    position: relative;
    padding-bottom: 10%;
    background-color: #ffffff81;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    z-index: 2;
}



@media screen and (min-width: 601px) {
    div.about2_chat_wrapper {
      font-size: 20px;
    }
}
  
@media screen and (max-width: 600px) {
    div.about2_chat_wrapper {
      font-size: 10px;
    }
}

.chat2 {
    border: 2px solid #003cff00;
    border-radius: 25px;
    position: relative;
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
}


.chat {
    border: 2px solid #003CFF;
    border-radius: 25px;
    position: relative;
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
}



.chat .chat_interior {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between; 
}

.chat .chat_output {
    flex-grow: 2;
    overflow-y: auto;
    padding: 1rem;
    display: flex;
    flex-direction: column;
}

.chat .input_area {
    border-top: 2px solid #003CFF;
    flex-shrink: 0;
    line-height: 3.4rem;
    display: flex;
}

.chat .agent {
    text-align: left;
    margin-right: auto;
    max-width: 75%;
    padding: 0.8rem 1rem .75rem;
    border: 2px solid #003CFF;
    border-radius: 15px;
    display: inline-block;
    font-size: medium;
    background: rgba(255, 255, 255, .8);
    z-index: 3;
}


.chat .user {
    text-align: right;
    margin-left: auto;
    max-width: 75%;
    padding: .8rem 1rem .75rem;
    display: inline-block;
    border: 2px solid #003CFF;
    background: #003cffe5;
    border-radius: 15px;
    color: white;
    font-size: medium;
    z-index: 3;
}

.chat .user+.agent {
    margin-top: 1em;
}

.chat .agent+.user {
    margin-top: 1em;
}

.chat .agent+.agent {
    margin-top: .5em;
}

@keyframes pulse {
    0% {
        transform: scale(0.95);
        background-color:  rgba(0, 0, 0, 0.7);
    }

    70% {
        transform: scale(1);
        background-color:  rgba(0, 0, 0, 0);
    }

    100% {
        transform: scale(0.95);
        background-color:  rgba(0, 0, 0, 0);
    }
}

.chat .agent.waiting div:nth-child(1) {
    animation: pulse 1s linear .2s infinite;
}
.chat .agent.waiting div:nth-child(2) {
    animation: pulse 1s linear .4s infinite;
}
.chat .agent.waiting div:nth-child(3) {
    margin-right: 0;
    animation: pulse 1s linear .6s infinite;
}

.chat .agent.waiting div {
    background-color: #003CFF;
    display: inline-block;
    margin: 0 .3em 0.1em 0;
    width: .4em;
    height: .4em;
    border-radius: 100%;
}


.chat_input {
    display: block;
    font: inherit;
    height: 70px;
    width: 100%;
    border: 0;
    margin: 0;
    margin-left: auto;
    margin-right: auto;
    padding: 0 1rem;
    overflow-x: auto;
    white-space: nowrap;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
    border-top: 2px solid #003CFF;
    flex-shrink: 0;
    line-height: 2rem;
    text-align: center;
    
}       

.chat_input::-webkit-scrollbar {
    display: none;
  }

.chat .disabled {
    pointer-events: none;
    color: rgba(0,0,0, 0.4);
}


.chat_input .buttoninput {
    margin-top: .9em;
    margin-bottom: .1em;
    margin-left: .25em;
    margin-right: .25em;
    background: rgb(0, 60, 255);
    border: 0px;
    border-radius: 15px;
    color: white;
    font-size: medium;
    padding: 0.15rem 2.5rem 0.15rem;
    

}

